# gimp-webp

./: CMakeLists.txt  Makefile  README  README.md  file-webp.c
debian/: README.source  changelog  control  copyright
extras/: libwebp-dev_0.5.1-1.1_amd64.deb  libwebp5_0.5.1-1.1_amd64.deb  libwebp_0.5.1-1.1_amd64.changes  libwebpdemux1_0.5.1-1.1_amd64.deb  libwebpmux1_0.5.1-1.1_amd64.deb
patches/: exiv2.patch
src/: CMakeLists.txt  config.h.in  export-dialog.c  export-dialog.h  file-webp.c  file-webp.h  read-webp.c  read-webp.h  webp-dialog.c  webp-dialog.c~  webp-dialog.h  webp-dialog.h~  webp-load.c  webp-load.c~  webp-load.h  webp-save.c  webp-save.c~  webp-save.h  webp-save.h~  webp.c  webp.c~  webp.h  write-webp.c  write-webp.h
